--- a/chrome-extension/assets/manifest.json
+++ b/chrome-extension/assets/manifest.json
@@ -8,7 +8,7 @@
                 "https://scryfall.com/*"
             ],
             "js": [
-                "scryfall/content.js"
+                "js/scryfall-content.js"
             ],
             "css": [
                 "css/scryfall.css"
@@ -21,7 +21,8 @@
     ],
     "web_accessible_resources": [
         "css/*",
-        "images/*"
+        "images/*",
+        "js/*"
     ],
     "manifest_version": 2
 }
