create an add button

--- a/chrome-extension/tsconfig.json
+++ b/chrome-extension/tsconfig.json
@@ -9,7 +9,12 @@
     "alwaysStrict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "paths": {
+      "@/*": [
+        "./src/ts/*"
+      ]
+    }
   },
   "include": [
     "src/**/*.ts"
