--- a/chrome-extension/tsconfig.json
+++ b/chrome-extension/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "es5",
     "module": "commonjs",
     "sourceMap": true,
+    "lib": [
+      "dom",
+      "es2018",
+    ],
     "outDir": "./dist",
     "baseUrl": ".",
     "strict": true,
