--- a/backend/makefile
+++ b/backend/makefile
@@ -1,3 +1,11 @@
 .PHONY: all
-all:
+all: prep build
+
+.PHONY: prep
+prep:
+	cd ../frontend; yarn build
+	go generate ./...
+
+.PHONY: build
+build:
 	go build -o bin/backend cmd/local/*.go
